update auto/man created ini files (mame0272)

--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -229,6 +229,7 @@ astrob1
 astrob2
 astrob2a
 astrob2b
+astrobf
 astrobg
 astrof
 astrof2
@@ -473,6 +474,7 @@ carnivalc
 carnivalca
 carnivalh
 carnivalha
+carnivalmm
 castfant
 caswin
 catacomb
@@ -570,6 +572,7 @@ cmkenosp
 cmkenospa
 cmmb103
 cmmb162
+cmpmx10
 cmrltv75
 cnebula
 cnightst
@@ -1242,6 +1245,7 @@ grobda2
 grobda3
 gryzor
 gryzor1
+gryzorm
 gseeker
 gseekerj
 gseekeru
@@ -1480,6 +1484,7 @@ jspecter
 jspecter2
 jumpbug
 jumpbugb
+jumpbugbc
 jumpbugbrf
 jumpcoas
 jumpcoasa
@@ -1908,6 +1913,7 @@ nibblero
 nibblerp
 nightmare
 ninjemak
+ninjemat
 nitrobal
 nitrobala
 nitrobalb
@@ -2835,6 +2841,7 @@ tail2nos
 tail2nosa
 takeoff
 talbot
+tangramq
 tankbatt
 tankbattb
 tankbust
@@ -3189,7 +3196,8 @@ xiistag
 xxmissio
 yamagchi
 yamato
-yamato2
+yamatoa
+yamatou
 yankeedo
 yellowcbb
 yellowcbj
