--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -647,6 +647,7 @@ ashuraj
 ashurau
 asideral
 aso
+asoccer
 assault
 assaultj
 assaultp
@@ -685,6 +686,7 @@ astrob
 astrob2
 astrob2a
 astrob2b
+astrobf
 astrobg
 astrocde
 astrocdl
@@ -1054,6 +1056,7 @@ bguns_la
 bguns_p1
 biathlon
 big10
+big10a
 bigappg
 bigbang
 bigbanga
@@ -1538,6 +1541,7 @@ bullfgtrs
 bullsdrt
 bullsdrtg
 bultrman
+bumba
 bup
 bupa
 buraiken
@@ -1673,6 +1677,7 @@ capbowl2
 capbowl3
 capbowl4
 capitol
+captainx
 captaven
 captavena
 captavene
@@ -1705,6 +1710,7 @@ carnivalb
 carnivalc
 carnivalh
 carnivalha
+carnivalmm
 carnking
 carpolo
 carrera
@@ -2018,6 +2024,7 @@ chukatai
 chukataij
 chukataija
 chukataiu
+chusenoh
 chwrestl
 chwy
 ciclone
@@ -2139,6 +2146,8 @@ cmpacmana
 cmpacmanb
 cmpchess
 cmpchess2
+cmpmx10
+cmpmx11
 cms6502
 cmspacmn
 cmsport
@@ -3044,6 +3053,7 @@ dgun2959
 dgun851
 dgun853
 dgunl3227
+dgunl3227a
 dharma
 dharmag
 dharmaj
@@ -3743,6 +3753,7 @@ failgate
 falcnwld
 falcnwlda
 falcnwldb
+falcnwldd
 falcon
 falconz
 famibox
@@ -3928,6 +3939,7 @@ fds
 feag
 feag2100
 feag2100a
+feagpriv
 feagv10
 feagv11
 feagv4
@@ -4724,6 +4736,7 @@ gjackpot
 gjspace
 gjungler
 gk2000
+gk2000a
 gk2100
 gladiatr
 glasgow
@@ -4884,6 +4897,7 @@ goldnpkb
 goldnpkc
 goldnpke
 goldnpkf
+goldnpkg
 goldnpkr
 goldpyr
 goldpyra
@@ -5163,6 +5177,7 @@ guitarssa
 guitarst
 guitarstp
 guitrbus
+gujtv108
 gulfstrm
 gulfstrma
 gulfstrmb
@@ -5187,6 +5202,7 @@ gunbustr
 gunbustrj
 gunbustru
 gunchamp
+gunchamps
 gundamex
 gundealr
 gundealra
@@ -5753,6 +5769,8 @@ ichirk
 idhimitu
 idolmj
 idsoccer
+idsoccera
+idsoccert
 ie15
 iemoto
 iemotom
@@ -6190,12 +6208,14 @@ jankenmn
 janptr96
 janptrsp
 janputer
+janputera
 janshin
 janshinp
 jansoua
 jantotsu
 jantouki
 janyoup2
+janyoup2a
 janyuki
 jb3000
 jbell
@@ -6247,6 +6267,7 @@ jjsquawko
 jjstrip
 jking02
 jking103a
+jking200pr
 jl2050
 jleague
 jleagueo
@@ -6350,6 +6371,7 @@ jpark
 jparkj
 jparkja
 jparkjc
+jparkmb
 jpcoin
 jpcoin2
 jpjcoin
@@ -6379,10 +6401,12 @@ juicebox
 juju
 jujub
 jujuba
+juku
 jumbogod
 jumpbean
 jumpbug
 jumpbugb
+jumpbugbc
 jumpbugbrf
 jumpcoas
 jumpcoasa
@@ -6945,6 +6969,7 @@ ldrun
 ldrun2
 ldrun3
 ldrun3j
+ldrun3jc
 ldrun4
 ldruna
 le2
@@ -7232,6 +7257,7 @@ lx_jg7415
 lxairjet
 lxnoddy
 lxspidaj
+lxts3
 lynx
 lynx128k
 lynx48k
@@ -7343,6 +7369,7 @@ maddonna
 madgear
 madgearj
 madmotor
+madmotora
 madshark
 madsharkbl
 madzoo
@@ -7438,6 +7465,7 @@ makaiden
 makaijan
 makaimur
 makaimurb
+makaimurba
 makaimurc
 makaimurg
 maketrax
@@ -8796,6 +8824,7 @@ nitrobal
 nitrobala
 nitrobalb
 niyanpai
+njp60in1
 nkdodge
 nkdodgeb
 nkishusp
@@ -10023,6 +10052,7 @@ pgear
 pgearr1
 pgm
 pgoal
+pgs268
 phantasm
 phantom
 phantom2
@@ -10464,6 +10494,7 @@ potnpkri
 potnpkrj
 potnpkrk
 potnpkrl
+potnpkrm
 potogold
 potopoto
 pottnpkr
@@ -10925,6 +10956,8 @@ rad_md1
 rad_md1uk
 rad_md2uk
 rad_opus
+rad_opusa
+rad_opusp
 rad_orun
 rad_sbw
 rad_sf2
@@ -13399,6 +13432,7 @@ supremo
 suprglob
 suprgolf
 suprgolfj
+suprgolfja
 suprheli
 suprleag
 suprloco
@@ -13584,6 +13618,7 @@ taiwanmb
 tak_geig
 tak_gin
 tak_hamr
+tak_town
 takefive
 takeoff
 talbot
@@ -13593,6 +13628,7 @@ taltbeast
 tama
 tandy102
 tandy200
+tangramq
 tangtang
 tank8
 tankbatl
@@ -13624,6 +13660,8 @@ targc
 targeth
 targeth10
 targetha
+tarzan103m
+tarzan202fa
 tarzanb
 tarzanc
 tascr30
@@ -13881,6 +13919,7 @@ thepitu1
 thepitu2
 thepitu3
 theroes
+theroesa
 thetogyu
 thief
 thndblst
@@ -14179,6 +14218,7 @@ tokyowarj
 toledo
 toledoa
 toledob
+tom_jump
 tomagic
 tomahawk
 tomahawk1
@@ -14605,6 +14645,7 @@ ufosensib
 ujlnow
 uk101
 uk2086
+ukiyobox
 ultennis
 ultennisj
 ultracin
@@ -14637,6 +14678,7 @@ unior
 unitron
 uniwars
 uniwarsa
+unk1682
 unkch1
 unkch2
 unkch3
@@ -15034,6 +15076,7 @@ vz2000
 vz300
 wacko
 wafricau
+waijockey
 wakuwak7
 wallc
 wallca
@@ -15041,6 +15084,7 @@ wallst
 wamazona
 wangpc
 wanted
+wantouch
 wantsega
 warahana
 warcadia
@@ -15093,6 +15137,7 @@ wbeachvl3
 wbeachvla
 wbml
 wbmlb
+wbmlb2
 wbmlbg
 wbmlbge
 wbmld
@@ -15303,6 +15348,7 @@ wrally2
 wrally2a
 wrallya
 wrallyat
+wrallyata
 wrallyb
 wrallyc
 wrecking
@@ -15479,7 +15525,8 @@ y532xl
 yachtmn
 yamagchi
 yamato
-yamato2
+yamatoa
+yamatou
 yamyam
 yamyamk
 yanchamr
