--- a/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
@@ -157,6 +157,7 @@ critcrsh
 crossbow
 crszone
 crszonev2a
+crszonev2b
 crszonev3a
 crszonev3b
 crszonev3b2
@@ -218,6 +219,9 @@ fastdraw
 fastdraw_130
 fctitler
 fds
+ferieki
+feriepu
+feriewt
 fgtlayer
 fgtlayerja
 finfurl
