--- a/00-databases-00/sorted_info_creation/0XXX/no_media.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/no_media.ini
@@ -1088,6 +1088,7 @@ armwaru
 armwaru1
 armwrest
 arrball
+arthurkn
 arwincm
 as1
 as_acp
@@ -1318,6 +1319,7 @@ astrob1
 astrob2
 astrob2a
 astrob2b
+astrobf
 astrobg
 astrocmd
 astrof
@@ -1861,6 +1863,7 @@ bhead2ka
 bhol_ltd
 biathlon
 big10
+big10a
 bigappg
 bigbang
 bigbanga
@@ -2134,6 +2137,7 @@ bmf_fr
 bmf_it
 bmf_jp
 bmf_nl
+bmf_nl302
 bmf_no
 bmf_sp
 bmf_sv
@@ -2230,6 +2234,7 @@ borenchj
 boris
 borisa
 borisdpl
+bornkidh
 borntofi
 borntofia
 borntofiv
@@ -2486,6 +2491,7 @@ bullsdrtg
 bullseye
 bullseyn
 bultrman
+bumba
 bumblbug
 bumblbugq
 bumblbugu
@@ -2540,6 +2546,7 @@ cabal
 cabala
 cabalbl
 cabalbl2
+cabalm
 cabaluk
 cabalukj
 cabalus
@@ -2610,6 +2617,7 @@ caprcyc
 capsnk
 capsnka
 capsnkb
+captainx
 captaven
 captavena
 captavene
@@ -2648,6 +2656,7 @@ carnivalc
 carnivalca
 carnivalh
 carnivalha
+carnivalmm
 carpolo
 carrera
 cars2lap
@@ -2798,6 +2807,7 @@ cdrawpkr
 cdsteljn
 cecmatch
 cedmag
+cellage
 cencourt
 centaur
 centauri
@@ -2993,6 +3003,7 @@ chukatai
 chukataij
 chukataija
 chukataiu
+chusenoh
 chwrestl
 chwy
 ciclone
@@ -3157,6 +3168,7 @@ cmasterh
 cmasteri
 cmasterj
 cmasterk
+cmcwa
 cmehyou
 cmezspin
 cmfb55
@@ -3171,6 +3183,8 @@ cmpacmana
 cmpacmanb
 cmpchess
 cmpchess2
+cmpmx10
+cmpmx11
 cmrltv75
 cmspacmn
 cmsport
@@ -3553,6 +3567,7 @@ crshrace2
 crshrace2a
 crszone
 crszonev2a
+crszonev2b
 crszonev3a
 crszonev3b
 crszonev3b2
@@ -3645,6 +3660,7 @@ cs8_ssp
 cs9_qps
 cs9_spp
 csc
+cscaoysd
 csce
 cscet
 csclub
@@ -3988,6 +4004,7 @@ dbz
 dbz2
 dbz2bl
 dbza
+dbzbgck
 dbzonep
 dbzscout
 dbzvrvs
@@ -4084,6 +4101,7 @@ ddragonbl2
 ddragonbla
 ddragonj
 ddragonja
+ddragonm
 ddragonu
 ddragonua
 ddragonub
@@ -4274,6 +4292,7 @@ dgun853
 dgunl3201
 dgunl3202
 dgunl3227
+dgunl3227a
 dh_lf2
 dh_lx2
 dharma
@@ -4472,6 +4491,7 @@ dm_px5
 dmainevent
 dmdfever
 dmndhrt
+dmndhrtn
 dmndrby
 dmndrbya
 dmndrbybl
@@ -4528,6 +4548,7 @@ dogyuuna
 dogyuunb
 dogyuunt
 dogyuunto
+dojokkot
 dokaben
 dokaben2
 dokidoki
@@ -4632,6 +4653,7 @@ dragnfly
 dragngun
 dragngunj
 dragon
+dragonmj
 dragoona
 dragoonj
 dragrace
@@ -4838,6 +4860,7 @@ dynamoaha
 dynamski
 dynashot
 dynasty
+dynastye
 dyndeka2
 dyndeka2b
 dyndesk
@@ -6342,6 +6365,7 @@ epo_quiz
 epo_sdb
 epo_stad
 epo_strk
+epo_strkp
 epo_tenn
 epo_tfit
 epo_tfp2
@@ -6553,6 +6577,7 @@ falcnwld
 falcnwlda
 falcnwldb
 falcnwldc
+falcnwldd
 falco500e
 falco5220e
 falco5220s
@@ -6749,6 +6774,9 @@ feldo
 fengyunh
 fenix
 fenixn
+ferieki
+feriepu
+feriewt
 fever13
 feverch
 feversoc
@@ -7145,6 +7173,7 @@ frtgenieb
 frtgeniec
 frtgenied
 fruitbun
+fruitcat
 fruitpar
 fruitpar206us
 fruitsmg
@@ -7427,6 +7456,7 @@ gamemach
 gamesnsm
 gametngk
 gametree
+gameu108
 gameu50
 gamezn2
 gammonm2
@@ -7806,6 +7836,7 @@ gjrstar2
 gjrstar3
 gjungler
 gk2000
+gk2000a
 gk2100
 gkidabc
 gkigt4
@@ -8052,6 +8083,7 @@ goldnpkc
 goldnpkd
 goldnpke
 goldnpkf
+goldnpkg
 goldnpkr
 goldpya6
 goldpym
@@ -8228,6 +8260,7 @@ grudgei
 grudgep
 gryzor
 gryzor1
+gryzorm
 gs4002
 gs4002a
 gs471
@@ -8370,6 +8403,7 @@ gtsersa
 gtsersb
 gtsupreme
 guardian
+guchokip
 guiness
 guitarfv
 guitarheroac
@@ -8378,6 +8412,7 @@ guitarssa
 guitarst
 guitarstp
 guitrbus
+gujtv108
 gulfstrm
 gulfstrma
 gulfstrmb
@@ -8483,6 +8518,7 @@ gwinggen
 gwinner
 gwnn
 gx700
+gyakyu
 gynotai
 gypmagic
 gypsyjug
@@ -8811,8 +8847,10 @@ hharry
 hharryb
 hharryb2
 hharryu
+hhgc319
 hhhippos
 hhotel
+hhunter
 hidctch2
 hidctch2a
 hidctch3
@@ -8835,6 +8873,7 @@ hiimpact4
 hiimpactp
 hikaru
 hikcheck
+hilice
 himesiki
 hipai
 hipai2
@@ -8919,6 +8958,7 @@ homerun
 homez80
 homo
 homura
+honeybee
 honeydol
 honeypot
 honooinv
@@ -9455,6 +9495,7 @@ istellar
 istellar2
 istreb
 itaten
+itazurac
 itazuram
 itc4
 itt1700
@@ -10934,6 +10975,7 @@ janoha
 janptr96
 janptrsp
 janputer
+janputera
 janshi
 janshinp
 jansou
@@ -10941,6 +10983,7 @@ jansoua
 jantotsu
 jantouki
 janyoup2
+janyoup2a
 janyuki
 jarajal
 jb_04a
@@ -11006,7 +11049,9 @@ jjsquawko
 jjstrip
 jking02
 jking103a
+jking200pr
 jking302us
+jkrbonus
 jkrmast
 jkrmasta
 jl2050
@@ -11133,10 +11178,12 @@ juju
 jujub
 jujuba
 jumanji
+jumanjia
 jumbogod
 jumpbean
 jumpbug
 jumpbugb
+jumpbugbc
 jumpbugbrf
 jumpcoas
 jumpcoasa
@@ -11739,6 +11786,7 @@ ldrun
 ldrun2
 ldrun3
 ldrun3j
+ldrun3jc
 ldrun4
 ldruna
 le2
@@ -12071,6 +12119,7 @@ lucky37
 lucky74
 lucky74a
 lucky74b
+lucky75
 lucky7i
 lucky7x
 lucky8
@@ -12105,6 +12154,7 @@ luckypkr
 luckyplr
 luckyrlt
 luckyseven
+luckystr
 luckyvl
 luckywld
 luckywldj
@@ -19674,6 +19724,7 @@ madgear
 madgearj
 madmoney2
 madmotor
+madmotora
 madrace
 madshark
 madsharkbl
@@ -19755,6 +19806,7 @@ magjackp
 magjackpa
 magjoker
 magkengo
+magkengou
 magmax
 magmaxa
 magmerm
@@ -19811,6 +19863,7 @@ makaiden
 makaijan
 makaimur
 makaimurb
+makaimurba
 makaimurc
 makaimurg
 maketrax
@@ -20428,6 +20481,7 @@ missw96
 missw96a
 missw96b
 missw96c
+miteshin
 mits680b
 miuchiz
 miwi2_16
@@ -20825,6 +20879,9 @@ mpchoice
 mpchoicea
 mplanets
 mplanetsuk
+mpoker2
+mpoker2a
+mpoker2b
 mps1000
 mps1230
 mps65
@@ -21057,6 +21114,7 @@ mugsmash
 multchmp
 multchmpa
 multchmpk
+multgmxl
 multi96
 multibaby
 multidrw
@@ -21481,6 +21539,7 @@ ninjaw1
 ninjawj
 ninjawu
 ninjemak
+ninjemat
 nitedrvr
 nitrobal
 nitrobala
@@ -22210,7 +22269,6 @@ pclubyo2
 pclubys
 pclubysa
 pcmostw
-pcmx11
 pcmx2
 pcockmag
 pcockmaga
@@ -23177,6 +23235,7 @@ pkladiesbl2
 pkladiesblu
 pkladiesl
 pkladiesla
+pkrboram
 pkrdewin
 pkrmast
 pkrmasta
@@ -23354,7 +23413,6 @@ polynetw
 polyplay
 polyplay2
 polyplay2c
-polysix
 pomp_l1
 pompeia6
 pompeia6a
@@ -23475,6 +23533,8 @@ potnpkri
 potnpkrj
 potnpkrk
 potnpkrl
+potnpkrm
+potnpkrn
 poto_a29
 poto_a31
 poto_a32
@@ -24188,6 +24248,8 @@ rad_md2uk
 rad_mtrk
 rad_mtrkp
 rad_opus
+rad_opusa
+rad_opusp
 rad_orun
 rad_ping
 rad_pingp
@@ -24707,6 +24769,7 @@ rmancp2j
 rmgoldyh
 rmhaihai
 rmhaihai2
+rmhaihaibl
 rmhaihib
 rmhaijin
 rmhaisei
@@ -24821,6 +24884,7 @@ rockyf
 rocnrope
 rocnropek
 rodent
+rodeokng
 rodland
 rodlanda
 rodlandj
@@ -24876,7 +24940,10 @@ rongrong
 rongrongg
 rongrongj
 ronjan
+ronjana
 ronjans
+ronjansa
+ronjansb
 ropeman
 rota_101
 rota_115
@@ -24984,6 +25051,7 @@ rugby
 rugrats
 rulechab
 rulechan
+ruletamag
 rumba
 rumblef
 rumblef2
@@ -25136,6 +25204,7 @@ sanjeon
 sanma
 sanremmg
 santam
+sanxpet
 sapizps3
 sapizps3a
 sapizps3b
@@ -25154,6 +25223,7 @@ satansat
 satansata
 satansatind
 sathena
+satoyama
 satsf3d
 saturn2
 saturnzi
@@ -31230,6 +31300,7 @@ shadfrceu
 shadowld
 shadoww
 shadowwa
+shadowwm
 shamnmg
 shamnmgu
 shangha2
@@ -33287,6 +33358,7 @@ supremo
 suprglob
 suprgolf
 suprgolfj
+suprgolfja
 suprheli
 suprleag
 suprloco
@@ -33509,11 +33581,14 @@ taitons1
 taitons2
 taiwanmb
 tajmah
+tak_beyb
 tak_chq
 tak_comt
 tak_geig
 tak_gin
 tak_hamr
+tak_town
+tak_zuba
 take5
 takefive
 takeoff
@@ -33522,6 +33597,8 @@ talkingbb
 talkingfb
 taltbeast
 tama
+tamapix
+tangramq
 tangtang
 tank
 tank8
@@ -33559,6 +33636,8 @@ targeth
 targeth10
 targetha
 tarzan
+tarzan103m
+tarzan202fa
 tarzana
 tarzanb
 tarzanc
@@ -33897,6 +33976,7 @@ theraid
 theraida
 therock
 theroes
+theroesa
 thetogyu
 thief
 thinkpad600
@@ -34276,6 +34356,8 @@ tom_12a
 tom_13
 tom_14h
 tom_dpgm
+tom_jump
+tom_tvho
 tomagic
 tomahawk
 tomahawk1
@@ -34405,6 +34487,7 @@ toutrunjd
 toyfight
 toyland
 toypop
+toyshop
 toysmarch
 toysmarch2
 tp1983
@@ -34416,6 +34499,7 @@ tp84b
 tpitfight
 tpkboram
 tpkborama
+tpkg2
 tpoker2
 tqst
 tqstp
@@ -34843,6 +34927,7 @@ ufomini
 uforobot
 ufosensi
 ufosensib
+ukiyobox
 ultarctc
 ultarctcup
 ultennis
@@ -34883,6 +34968,8 @@ unk820501
 unk960606
 unk960606b
 unkanyw
+unkboram
+unkbpmed
 unkch1
 unkch2
 unkch3
@@ -35778,8 +35865,10 @@ wamazonv
 wanganmd
 wanganmr
 wanpakup
+wanpunch
 wanted
 wantgman
+wantouch
 wantsega
 war3cb
 warahana
@@ -35830,6 +35919,7 @@ wbeachvla
 wbingo06
 wbml
 wbmlb
+wbmlb2
 wbmlbg
 wbmlbge
 wbmld
@@ -36203,6 +36293,7 @@ wrally2
 wrally2a
 wrallya
 wrallyat
+wrallyata
 wrallyb
 wrallyc
 wrecking
@@ -36337,6 +36428,7 @@ x2222
 x2222o
 x5jokers
 x80wc
+xavaero
 xavbaseb
 xavbassf
 xavbowl
@@ -36451,7 +36543,8 @@ y532xl
 yachtmn
 yamagchi
 yamato
-yamato2
+yamatoa
+yamatou
 yamyam
 yamyamk
 yanchamr
@@ -36473,6 +36566,7 @@ yosakdona
 yosimotm
 yosimoto
 youjyudn
+youkai
 youkaidk1
 youkaidk2
 youma
@@ -36481,6 +36575,7 @@ youmab
 youmab2
 yoyospel
 yujan
+yujogs
 yuka
 yukiwo
 yukon
@@ -36573,6 +36668,7 @@ zoar
 zodiac
 zodiack
 zoidiexp
+zoids
 zoidsinf
 zokumahj
 zombraid
