update auto/man created ini files (mame0274)

--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -887,6 +887,7 @@ dsaberj
 dspirit
 dspirit1
 dspirit2
+dt7
 dtrvwz5v
 dualaslt
 dyger
@@ -1077,6 +1078,7 @@ futari15a
 futaribl
 futariblj
 futflash
+futflasha
 futspy
 fwheel
 fx
@@ -1110,7 +1112,6 @@ galaxcirsa
 galaxia
 galaxiaa
 galaxiab
-galaxiac
 galaxiamv
 galaxian
 galaxiana
@@ -1928,6 +1929,7 @@ nost
 nostj
 nostk
 nsub
+nsubc
 numcrash
 nunchaku
 nyny
@@ -2382,6 +2384,7 @@ rockn3
 rockn4
 rockna
 rocknms
+rocktcnvy
 rocktrv2
 rocnrope
 rocnropek
@@ -2721,6 +2724,7 @@ sqixr1
 sqixu
 sraider
 srdarwin
+srdarwinb
 srdarwinj
 srdmissn
 srumbler
@@ -3036,6 +3040,7 @@ turbofrcu
 turbofrcua
 turbotag
 turpin
+turpinnv
 turpins
 turtles
 tutankhm
