--- a/00-databases-00/sorted_info_creation/0XXX/classich.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/classich.ini
@@ -1,3 +1,4 @@
+alienfev
 alnattck
 alnchase
 amaztron
@@ -35,6 +36,9 @@ copycata
 cpacman
 cpacmanr1
 cqback
+digimon
+digimonv2
+digimonv3
 ditto
 dxfootb
 ebaskb2
@@ -139,6 +143,10 @@ subwars
 t7in1ss
 talkingbb
 talkingfb
+tama
+tamaang
+tamag2
+tamamot
 tbaskb
 tbreakup
 tc4
@@ -152,6 +160,8 @@ tmscramb
 tmtennis
 tmtron
 tmvolleyb
+trclchick
+trdivadv
 trsgkeep
 trshutvoy
 trspacmis
