--- a/00-databases-00/sorted_info_creation/0XXX/jakks.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/jakks.ini
@@ -16,13 +16,18 @@ jak_mk
 jak_mpac
 jak_mpacw
 jak_nick
+jak_pix
 jak_pooh
+jak_potc
+jak_powr
 jak_sbfc
 jak_sbjd
 jak_sdoo
 jak_sith
 jak_sithp
+jak_spd3
 jak_spdm
+jak_supm
 jak_swot
 jak_wall
 jak_wof
