--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -61,8 +61,9 @@
 280zzzap
 30test
 39in1
-3bagflnz
-3bagflvt
+3bagfull
+3bagfullnz
+3bagfullu
 3countb
 3in1semi
 3in1semia
@@ -322,6 +323,7 @@ alienaru
 aliencha
 alienchac
 aliencr
+alienfev
 alieninv
 alieninvp2
 aliens
@@ -502,15 +504,40 @@ apple10
 apple2
 apple2c
 apple2c0
+apple2c0de
+apple2c0fr
+apple2c0se
+apple2c0uk
 apple2c3
+apple2c3de
+apple2c3fr
+apple2c3se
+apple2c3uk
 apple2c4
+apple2c4de
+apple2c4fr
+apple2c4se
+apple2c4uk
+apple2cde
+apple2cfr
 apple2cp
+apple2cse
+apple2cuk
 apple2e
+apple2ede
 apple2ee
+apple2eede
 apple2eefr
 apple2ees
+apple2eese
 apple2eeuk
+apple2efr
 apple2ep
+apple2epde
+apple2epfr
+apple2epse
+apple2epuk
+apple2ese
 apple2euk
 apple2gs
 apple2gsr0
@@ -579,6 +606,7 @@ archrivla
 archrivlb
 arcmania
 arcwins
+arcwinsa
 area51
 area51a
 area51mx
@@ -856,6 +884,7 @@ ballbros
 balonfgt
 baluba
 bambball
+ban_krkk
 ban_krrj
 bananadr
 banbam
@@ -1007,6 +1036,8 @@ beathead
 beena
 beezer
 beezer1
+bejpoker
+beluga
 benberob
 berabohm
 berabohmb
@@ -1131,6 +1162,7 @@ bking3
 bkrtmaq
 black
 blackhol
+blackpntu
 blackt96
 bladestl
 bladestle
@@ -1338,6 +1370,8 @@ boothill
 bootsctnu
 bootsctnua
 bootsctnub
+bootsctnuc
+bootsctnud
 borench
 borencha
 borenchj
@@ -1375,6 +1409,7 @@ boxingb
 boxyboy
 boxyboya
 bparty
+bpartyb
 bpengo
 bradley
 brain
@@ -1555,6 +1590,7 @@ burningfh
 burningfp
 burningfpa
 burningfpb
+busicom
 butasan
 butasanj
 butrfly
@@ -1756,6 +1792,7 @@ cb3b
 cb3d
 cb3e
 cb3g
+cb3h
 cbaj
 cball
 cbasebal
@@ -1904,6 +1941,7 @@ cgip30b
 cgip30cs
 cgold
 cgold2
+cgold2a
 cgraplop
 cgraplop2
 cgraplopj
@@ -2137,8 +2175,11 @@ cmasterh
 cmasteri
 cmasterj
 cmasterk
+cmasterl
 cmehyou
 cmezspin
+cmezspina
+cmezspinb
 cmfun
 cmissnx
 cmpacman
@@ -2161,6 +2202,7 @@ cmwm
 cnbaskb
 cncchess
 cncchess2
+cnchess
 cndypuzl
 cnebula
 cnfball
@@ -2196,6 +2238,7 @@ cocoh
 cocoloco
 cocolocoa
 cocolocob
+codemagik
 coh1000a
 coh1000c
 coh1000t
@@ -2406,6 +2449,7 @@ cpc6128s
 cpc6128sp
 cpc664
 cpc88
+cpchess
 cpg120
 cphantom
 cpoker
@@ -2564,8 +2608,10 @@ ct2k3sa
 ct2k3sp
 ct486
 ct65
+ct8000
 ctainv
 cterrani
+ctfk1
 cthd2003
 ctisland
 ctisland2
@@ -2606,6 +2652,7 @@ cupfinal
 curvebal
 cutefght
 cutieq
+cutyline
 cvicny
 cworld
 cworld2j
@@ -2778,6 +2825,7 @@ dazzler
 db32016
 dbc
 dbdancem
+dblagent
 dblaxle
 dblaxleu
 dblaxleul
@@ -3061,6 +3109,7 @@ dharmak
 diablo68
 diablo68a
 diablo68b
+diablo68c
 diamond
 diamond2
 diamrun
@@ -3086,6 +3135,9 @@ digdugat1
 digger
 diggerc
 diggerma
+digimon
+digimonv2
+digimonv3
 digsid
 dimahoo
 dimahoou
@@ -3228,6 +3280,7 @@ dolphntrce
 dolphntrcea
 dolphntrceb
 dolphntru
+dolphntrua
 domino
 dominoa
 dominob
@@ -3497,7 +3550,7 @@ eforest
 eforestnz
 eforestu
 eforsta5
-eforsta5cea
+eforstce
 egalaxn2
 egghunt
 eggor
@@ -3506,6 +3559,7 @@ eggsplc
 eggventr
 eggventr1
 eggventr2
+eggventr4
 eggventr7
 eggventr8
 eggventra
@@ -3576,6 +3630,7 @@ endless
 endlessa
 endrichs
 endrichsa
+endrichsb
 endurobl
 enduror
 enduror1
@@ -3601,6 +3656,7 @@ epo_mms
 epo_mmsp
 epo_quiz
 epo_sdb
+epo_tetr
 epo_tfp2
 epo_tp2p
 epo_tp2s
@@ -3661,7 +3717,9 @@ evilngt
 evilston
 evmbug
 evosocc
+excal
 excali64
+excaltm
 excelsr
 excelsra
 excitebk
@@ -3982,6 +4040,7 @@ fex68km3
 fex68km3a
 fex68km3b
 fex68km4
+fex68km4a
 fexcel
 fexcel12
 fexcel12a
@@ -4369,6 +4428,7 @@ futari15a
 futaribl
 futariblj
 futflash
+futflasha
 futspy
 fuusenpn
 fvrpitch
@@ -4423,7 +4483,6 @@ galaxi
 galaxia
 galaxiaa
 galaxiab
-galaxiac
 galaxiamv
 galaxian
 galaxiana
@@ -4512,6 +4571,7 @@ galxwarst2
 gamate
 gambitv
 gambler
+gamblra5
 gameboy
 gamecom
 gamefgtr
@@ -4633,7 +4693,7 @@ geebeeb
 geebeeg
 gegege
 geimulti
-geisha
+geishanz
 gekiretu
 gekiretup
 gekiridn
@@ -4690,6 +4750,7 @@ ghoshunt
 ghostb
 ghostb2a
 ghostb3
+ghostb3a
 ghostlop
 ghostmun
 ghouls
@@ -4702,6 +4763,7 @@ ghunters
 gigaman2
 gigandes
 gigandesa
+gigapets
 gigas
 gigasb
 gigasm2
@@ -4898,9 +4960,10 @@ goldnpkc
 goldnpke
 goldnpkf
 goldnpkg
+goldnpkh
 goldnpkr
-goldpyr
-goldpyra
+goldpyru
+goldpyrua
 goldstar
 goldstbl
 golgo13
@@ -4951,7 +5014,8 @@ gradius2b
 gradius3
 gradius3a
 gradius3j
-gradius3js
+gradius3ja
+gradius3jas
 gradius4
 gradius4a
 gradius4aa
@@ -5279,8 +5343,8 @@ h2hsoccerc
 h8
 h88
 h89
+h89_cdr
 h89_mms
-h89_sigmasoft
 hachamf
 hachamfa
 hachamfb
@@ -5476,8 +5540,6 @@ hexpool
 hexpoola
 hginga
 hgkairak
-hgokbang
-hgokou
 hh
 hh_1
 hharry
@@ -5541,7 +5603,6 @@ hnfubuki
 hngmnjpm
 hngmnjpmd
 hnkochou
-hnktonku
 hnoridur
 hobby
 hoccer
@@ -5557,6 +5618,7 @@ homerun
 homez80
 homo
 honeydol
+honktonk
 hook
 hookj
 hooku
@@ -5758,6 +5820,9 @@ ibm5160
 ibmpcjr
 icanpian
 icatel
+icb_car
+icb_dp
+icb_ts
 iceclimb
 iceclimba
 iceclmrd
@@ -5766,6 +5831,7 @@ ichirbl
 ichirj
 ichirjbl
 ichirk
+icproul
 idhimitu
 idolmj
 idsoccer
@@ -5911,6 +5977,7 @@ inyourfa
 iowapp
 ipb
 ipminvad
+ipminvad1
 ippatsu
 iq151
 iq501
@@ -6185,12 +6252,17 @@ jak_mk
 jak_mpac
 jak_mpacw
 jak_nick
+jak_pix
 jak_pooh
+jak_potc
+jak_powr
 jak_sbfc
 jak_sbjd
 jak_sith
 jak_sithp
+jak_spd3
 jak_spdm
+jak_supm
 jak_swot
 jak_wall
 jak_wof
@@ -6215,6 +6287,7 @@ jansoua
 jantotsu
 jantouki
 janyoup2
+janyoup2702
 janyoup2a
 janyuki
 jb3000
@@ -6310,6 +6383,7 @@ jojour1
 jojour2
 jokercar
 jokercrd
+jokercrdf
 jokpoker
 jokpokera
 jokpokerb
@@ -6593,8 +6667,9 @@ kgalaha
 kgalahce
 kgarfld
 kgbird
-kgbirda
 kgbirda5
+kgbirdnz
+kgbirdnza
 kgradius
 kick
 kickball
@@ -6635,6 +6710,7 @@ kingman
 kingofb
 kingofbj
 kingpin
+kingsran
 kingt_l1
 kinst
 kinst2
@@ -6854,7 +6930,7 @@ kurukuru
 kuzmich
 kvakazad
 kviper
-kyhatonu
+kyhaton
 kyros
 kyrosj
 kyuhito
@@ -7021,6 +7097,7 @@ lethalenub
 lethalenux
 lethalj
 lethalth
+letsgof
 letterlf
 letterlg
 levers
@@ -7062,6 +7139,7 @@ lhb2
 lhbv33c
 lhdmg
 lhdmgp
+lhdmgp200c3m
 lhzb
 lhzb2
 lhzb2a
@@ -7207,6 +7285,9 @@ lucky8i
 lucky8k
 lucky8l
 lucky8m
+lucky8n
+lucky8o
+lucky8p
 lucky_l1
 luckybal
 luckybala
@@ -7338,6 +7419,15 @@ maclc550
 maclc575
 maclc580
 macpb100
+macpb140
+macpb145
+macpb145b
+macpb160
+macpb165
+macpb165c
+macpb170
+macpb180
+macpb180c
 macplus
 macprtb
 macqd605
@@ -7411,6 +7501,7 @@ magicstk
 magimask
 magimaska
 magimaskb
+magimaskc
 magipur
 magix
 magixb
@@ -7465,7 +7556,7 @@ makaiden
 makaijan
 makaimur
 makaimurb
-makaimurba
+makaimurbbl
 makaimurc
 makaimurg
 maketrax
@@ -7614,6 +7705,8 @@ mbutrfly
 mc10
 mc1000
 mc1502
+mc200
+mc400
 mc68000
 mc7105
 mc8020
@@ -7649,6 +7742,8 @@ mcnpshnt
 mcompgin
 mcontest
 mcwars
+mcword
+mcword_de
 md6802
 mdallas
 mdchoice
@@ -7953,7 +8048,8 @@ mjanbari
 mjangels
 mjapinky
 mjcamera
-mjcamerb
+mjcameram
+mjcamerao
 mjchuuka
 mjclinic
 mjclinica
@@ -8123,7 +8219,6 @@ mmatrixj
 mmaulers
 mmaze
 mmaze2
-mmcamera
 mmd1
 mmd2
 mmehyou
@@ -8888,6 +8983,9 @@ ns8lines
 ns8linesa
 ns8linew
 ns8linewa
+ns8linewb
+ns8linewc
+ns8linewd
 nshort
 nslasher
 nslasherj
@@ -8902,6 +9000,7 @@ nstarfox
 nstocker
 nstockera
 nsub
+nsubc
 nsvip
 nsvipa
 nsvipb
@@ -8940,6 +9039,7 @@ nzeroteam
 nzeroteama
 nzeroteamb
 ob68k1a
+obdmx
 oc2000
 oceanpar
 oceanpar101us
@@ -9496,6 +9596,8 @@ pengopac
 pengpaya
 pengpayc
 pengpayce
+pengpaycea
+pengpaydx
 pengpuck
 penky
 penkyi
@@ -9533,6 +9635,9 @@ pepp0045a
 pepp0045b
 pepp0045c
 pepp0045d
+pepp0045e
+pepp0045f
+pepp0045g
 pepp0046
 pepp0046a
 pepp0046b
@@ -9545,6 +9650,7 @@ pepp0050
 pepp0050a
 pepp0050b
 pepp0050c
+pepp0050d
 pepp0051
 pepp0052
 pepp0053
@@ -9553,6 +9659,7 @@ pepp0055
 pepp0055a
 pepp0055b
 pepp0055c
+pepp0055d
 pepp0057
 pepp0057a
 pepp0057b
@@ -9574,6 +9681,7 @@ pepp0085
 pepp0089
 pepp0094
 pepp0094a
+pepp0102
 pepp0103
 pepp0103a
 pepp0103b
@@ -9586,6 +9694,7 @@ pepp0117
 pepp0118
 pepp0120
 pepp0122
+pepp0123
 pepp0125
 pepp0125a
 pepp0126
@@ -9624,6 +9733,7 @@ pepp0197b
 pepp0197c
 pepp0197d
 pepp0197e
+pepp0197f
 pepp0203
 pepp0203a
 pepp0203b
@@ -9639,8 +9749,10 @@ pepp0223
 pepp0224
 pepp0224a
 pepp0230
+pepp0231
 pepp0232
 pepp0242
+pepp0242a
 pepp0249
 pepp0250
 pepp0250a
@@ -9725,6 +9837,7 @@ pepp0536
 pepp0538
 pepp0540
 pepp0540a
+pepp0540b
 pepp0542
 pepp0542a
 pepp0542b
@@ -9781,6 +9894,7 @@ peps0267
 peps0271
 peps0275
 peps0275a
+peps0278
 peps0280
 peps0280a
 peps0291
@@ -9879,6 +9993,7 @@ pex0057pf
 pex0057pg
 pex0060p
 pex0124p
+pex0126p
 pex0127p
 pex0150p
 pex0158p
@@ -9931,6 +10046,7 @@ pex0841s
 pex0846s
 pex0998s
 pex1087s
+pex2001p
 pex2002p
 pex2004p
 pex2010p
@@ -9967,6 +10083,7 @@ pex2111p
 pex2121p
 pex2121pa
 pex2127p
+pex2133p
 pex2134p
 pex2143p
 pex2149p
@@ -9993,6 +10110,7 @@ pex2270p
 pex2272p
 pex2275p
 pex2276p
+pex2278p
 pex2279p
 pex2283p
 pex2284p
@@ -10117,6 +10235,8 @@ pi4d20
 pi4d25
 pi4d30
 pi4d35
+pi4d50
+pi4d70
 piccolop
 pickin
 pickwin
@@ -10495,6 +10615,9 @@ potnpkrj
 potnpkrk
 potnpkrl
 potnpkrm
+potnpkrn
+potnpkro
+potnpkrp
 potogold
 potopoto
 pottnpkr
@@ -10537,6 +10660,7 @@ ppp1mp
 pprobe
 ppsatan
 ppspeed
+prail
 prav82
 prav8d
 prav8dd
@@ -10707,6 +10831,7 @@ punisherj
 punisheru
 punkshot
 punkshot2
+punkshot2a
 punkshot2e
 punkshotj
 pururun
@@ -10768,6 +10893,7 @@ pyl601a
 pylo
 pyramid
 pyros
+pyutakun
 pyuuta
 pyuutajr
 pzlbowl
@@ -10874,7 +11000,6 @@ quizard_10
 quizard_12
 quizard_17
 quizardi
-quizardi_10
 quizardi_12
 quizardi_17
 quizchq
@@ -11389,6 +11514,7 @@ rmancp2j
 rmgoldyh
 rmhaihai
 rmhaihai2
+rmhaihaibl
 rmhaihib
 rmhaijin
 rmhaisei
@@ -11479,6 +11605,7 @@ rockrage
 rockragea
 rockragej
 rockstar
+rocktcnvy
 rocktris
 rocktrv2
 rocnrope
@@ -11619,9 +11746,10 @@ rungunad
 rungunb
 rungunbd
 rungund
-rungunua
-rungunuad
-rungunud
+rungunuaad
+rungunuabd
+rungunuba
+rungunubad
 runpuppy
 runrun
 rushatck
@@ -11844,7 +11972,7 @@ sc2drwhodx1
 sc2drwhop
 sc2drwhou
 sc3000
-sc3000h
+sc3000pal
 scandal
 scandalm
 scessjoe
@@ -11951,6 +12079,7 @@ sdmg2a
 sdodgeb
 sdtennis
 sdtor
+sdtora
 sdungeon
 sdungeona
 seabass
@@ -12502,6 +12631,7 @@ sitv1
 sjcd2kx3
 sjryuko
 sjryuko1
+sjunior
 skatekds
 skattv
 skattva
@@ -12633,6 +12763,7 @@ smgpu2
 smgpu2d
 smgpud
 smiconk
+sminiboy
 smissw
 smondial
 smondial2
@@ -12972,6 +13103,7 @@ spk114it
 spk115it
 spk116it
 spk116itmx
+spk120in
 spk200ua
 spk201ua
 spk203us
@@ -13056,6 +13188,7 @@ srangern
 srangero
 srangerw
 srdarwin
+srdarwinb
 srdarwinj
 srdmissn
 srmdb
@@ -13183,6 +13316,7 @@ sstriker
 sstrikerk
 ssystem3
 ssystem4
+stackch
 stactics
 stadhero
 stadhr96
@@ -13619,6 +13753,7 @@ tak_geig
 tak_gin
 tak_hamr
 tak_town
+tak_wdg
 takefive
 takeoff
 talbot
@@ -13626,6 +13761,9 @@ talkingbb
 talkingfb
 taltbeast
 tama
+tamaang
+tamag2
+tamamot
 tandy102
 tandy200
 tangramq
@@ -13956,6 +14094,7 @@ thunderxj
 thundfox
 thundfoxj
 thundfoxu
+thundhrt
 thunt
 thuntk
 ti1000
@@ -14272,6 +14411,7 @@ toride2g
 toride2gg
 toride2gk
 toride2j
+toride2ji
 tornado1
 tornbase
 tortufam
@@ -14338,6 +14478,8 @@ travrusab
 travrusab2
 trckydoc
 trckydoca
+trclchick
+trdivadv
 treahunt
 trebltop
 tricktrp
@@ -14377,6 +14519,7 @@ trivquiz
 trivrus
 trizn_l1
 trizn_t1
+trktreat
 troangel
 trobhood
 trobocop2
@@ -14539,6 +14682,7 @@ turbotag
 turfmast
 turkhunt
 turpin
+turpinnv
 turpins
 turrett
 turtles
@@ -14854,6 +14998,7 @@ venture4
 venture5a
 venture5b
 venus
+venusdm
 verbena
 vespovar
 vesta
@@ -15075,7 +15220,7 @@ vz200
 vz2000
 vz300
 wacko
-wafricau
+wafrica
 waijockey
 wakuwak7
 wallc
@@ -15175,8 +15320,9 @@ wcbowl16
 wcbowl161
 wcbowl165
 wcbowldx
+wcircus
 wcougar
-wcougaruc
+wcougaru
 wcvol95
 wcvol95j
 wcvol95x
@@ -15384,6 +15530,7 @@ wtchjackg
 wtchjacki
 wtchjackj
 wtennis
+wtiger
 wtigernz
 wtrnymph
 wupndown
@@ -15523,6 +15670,7 @@ y503iir
 y503iir2
 y532xl
 yachtmn
+yakyuken
 yamagchi
 yamato
 yamatoa
