--- a/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
@@ -77,6 +77,7 @@ borntofia
 borntofiv
 bparty
 bpartya
+bpartyb
 bronx
 bubbletr
 bubbletrj
@@ -195,6 +196,7 @@ edu64
 eggventr
 eggventr1
 eggventr2
+eggventr4
 eggventr7
 eggventr8
 eggventra
@@ -302,6 +304,9 @@ iq501
 iq502
 iteagle
 ivelultr
+jd363
+jd364
+jd368
 jdredd
 jdreddb
 jnero
@@ -312,7 +317,7 @@ kaiunqz
 kartduel
 kartduelja
 kdeadeye
-kyhatonu
+kyhaton
 laser2c
 laseract
 laseractj
@@ -368,6 +373,7 @@ maddoga
 magimask
 magimaska
 magimaskb
+magimaskc
 magtcha5
 magtcha5a
 magtouch
@@ -561,12 +567,15 @@ pet64
 pex0006k
 pex0013k
 pex0013ka
+pickydis
 pickytlk
 pico
 picoj
 picou
 pilot1k
 pilot5k
+plets300
+plets350
 plus4
 plus4p
 pntnpuzl
@@ -609,7 +618,7 @@ rex6000
 roadrunm
 sb486
 sc3000
-sc3000h
+sc3000pal
 scrabble
 scrabbled
 segaai
