add drivers manually for 274 and up

--- a/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
@@ -3,6 +3,7 @@
 ablmini
 ablpinb
 arcade10
+ban_krkk
 bittboy
 brke23p2
 cmpmx10
@@ -89,6 +90,7 @@ sy889
 taitons1
 taitons2
 tak_geig
+tak_wdg
 techni4
 timetp36
 tmntmutm
