add drivers manually for 274 and up

--- a/00-databases-00/sorted_info_creation/0XXX/classich.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/classich.ini
@@ -58,6 +58,7 @@ elecdet
 eleciq
 epacman2
 epacman2r
+epo_tetr
 esbattle
 esoccer
 estargte
@@ -73,6 +74,7 @@ galaxy2b
 gckong
 gdigdug
 ghalien
+gigapets
 ginv
 ginv1000
 ginv2000
@@ -137,6 +139,7 @@ skywriter
 splasfgt
 splitsec
 ssfball
+stackch
 stopthief
 stopthiefp
 subwars
@@ -170,6 +173,7 @@ trsrescue
 trthuball
 uboat
 ufombs
+venusdm
 vinvader
 wildfire
 zackman
