add drivers manually for 275 and up

--- a/00-databases-00/sorted_info_creation/0XXX/classich.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/classich.ini
@@ -54,6 +54,7 @@ einspace
 einvader
 einvader2
 einvaderc
+elbaskb
 elecdet
 eleciq
 epacman2
@@ -167,6 +168,7 @@ trclchick
 trdivadv
 trsgkeep
 trshutvoy
+trspacadv
 trspacmis
 trspider
 trsrescue
