update auto/man created ini files (mame0275)

--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -89,6 +89,7 @@ aerofgt
 aerofgtb
 aerofgtc
 aerofgts
+aerofgtsg
 aerofgtst
 afighter
 afightera
@@ -222,6 +223,7 @@ assaultj
 assaultp
 asterion
 astinvad
+astinvadb
 astrians
 astroamb
 astrob
@@ -426,6 +428,7 @@ bronx
 brubber
 brvblade
 brvbladea
+brvbladeg
 brvbladej
 brvbladeu
 btime
@@ -2183,6 +2186,7 @@ pturn
 puckman
 puckmana
 puckmanb
+puckmanb3
 puckmanf
 puckmanh
 puckmod
@@ -2306,6 +2310,7 @@ rdft2u
 rdft2us
 rdfta
 rdftadi
+rdftadia
 rdftam
 rdftau
 rdftauge
@@ -2528,6 +2533,7 @@ sengekisj
 senjyo
 setaroul
 setaroula
+setaroulm
 sexyboom
 sfkick
 sfkicka
