--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -238,6 +238,7 @@ aerofgt
 aerofgtb
 aerofgtc
 aerofgts
+aerofgtsg
 aerofgtst
 aerolitol
 aerolitos
@@ -696,6 +697,7 @@ asteroid2
 asteroidb1
 asteroidb2
 astinvad
+astinvadb
 astoneag
 astorm
 astorm3
@@ -1411,6 +1413,7 @@ boxyboya
 bparty
 bpartyb
 bpengo
+bpoker
 bradley
 brain
 brainbaf
@@ -1462,6 +1465,7 @@ bruc100a
 brutforc
 brvblade
 brvbladea
+brvbladeg
 brvbladej
 brvbladeu
 brvteam
@@ -1683,6 +1687,7 @@ cameltry
 cameltrya
 cameltryau
 cameltryj
+cameltryu
 camlight
 can09t
 canasta
@@ -1794,6 +1799,7 @@ cb3e
 cb3g
 cb3h
 cbaj
+cbajbl
 cball
 cbasebal
 cbdash
@@ -2246,6 +2252,7 @@ coh1000w
 coh1001l
 coh1002e
 coh1002m
+coh1002t
 coh1002v
 coh3002c
 coh3002t
@@ -2449,7 +2456,7 @@ cpc6128s
 cpc6128sp
 cpc664
 cpc88
-cpchess
+cpchess2
 cpg120
 cphantom
 cpoker
@@ -3584,6 +3591,7 @@ ejsakura
 ejsakura12
 ekusera
 elandore
+elbaskb
 elecdet
 eleciq
 electrio
@@ -3864,6 +3872,7 @@ fax
 fax2
 fb01
 fb2010
+fb2010a
 fb2gen
 fb2genc1
 fb2genc2
@@ -3882,6 +3891,7 @@ fb2ndv1
 fb2ndv2
 fb3g
 fb4
+fb4_14
 fb4b2
 fb4c1
 fb4c2
@@ -4187,6 +4197,7 @@ fl7_500
 fl7_tw
 flagrall
 flamegun
+flamegung
 flamegunj
 flash
 flash_l1
@@ -4390,6 +4401,7 @@ fstarfrcw
 fstm1
 fswords
 ftimpact
+ftimpactg
 ftimpactj
 ftimpactu
 ftimpcta
@@ -4682,6 +4694,7 @@ gckong
 gcpinbal
 gdarius
 gdarius2
+gdariusg
 gdariusj
 gdariusu
 gderby
@@ -5513,6 +5526,7 @@ hec2mx40
 hec2mx80
 hector1
 hedpanic
+hedpanic830
 hedpanica
 hedpanicf
 hedpanico
@@ -6598,6 +6612,7 @@ kchampvs
 kchampvs2
 kchampvs3
 kchampvs4
+kchqflag
 kcontra
 kdribble
 kdynastg
@@ -6809,6 +6824,7 @@ kok
 kokoroj
 kokoroj2
 kokoroja
+kollon
 kollonc
 komemokos
 komocomo
@@ -6885,6 +6901,8 @@ kovsh101
 kovsh102
 kovsh103
 kozure
+kpchess
+kpplus
 kr03
 kram
 krama
@@ -7428,6 +7446,12 @@ macpb165c
 macpb170
 macpb180
 macpb180c
+macpd210
+macpd230
+macpd250
+macpd270c
+macpd280
+macpd280c
 macplus
 macprtb
 macqd605
@@ -7650,6 +7674,7 @@ matrimbl
 mattelcs
 mausuke
 maverik
+mawasunda
 max10in1
 maxaflex
 maxf_102
@@ -7960,6 +7985,9 @@ microkit
 micrombc
 micron
 microvsn
+midi2cv8
+midi2cv8_vhz
+midiverb
 midnrun
 midnruna
 midnruna2
@@ -8420,6 +8448,7 @@ mrgoemon
 mrheli
 mrisc
 mrisc2
+mrisca
 mrjong
 mrkicker
 mrkougar
@@ -10564,6 +10593,7 @@ popflameb
 popflamen
 popira
 popira2
+popirak
 popn1
 popn1a
 popn1j
@@ -10652,7 +10682,6 @@ ppd
 ppgc200g
 ppj
 ppking
-pplus
 ppmast93
 ppp
 ppp11
@@ -10681,6 +10710,7 @@ primoa64
 primob32
 primob48
 primob64
+primrag2
 primrage
 primrage20
 primrageo
@@ -10805,6 +10835,7 @@ puchicaru
 puckman
 puckmana
 puckmanb
+puckmanb3
 puckmanf
 puckmanh
 puckmod
@@ -11221,6 +11252,7 @@ raycrisj
 rayforce
 rayforcej
 raystorm
+raystormg
 raystormj
 raystormo
 raystormu
@@ -11299,6 +11331,7 @@ rdft2u
 rdft2us
 rdfta
 rdftadi
+rdftadia
 rdftam
 rdftau
 rdftauge
@@ -12504,11 +12537,13 @@ shinoblb
 shinobls
 shinygld
 shippumd
+shiryu2
 shisen
 shisen2
 shisena
 shmc1200
 shngmtkb
+shngmtkbg
 shocking
 shockingk
 shockingko
@@ -12549,6 +12584,7 @@ shuttlei
 shuuz
 shuuz2
 sia2650
+sianniv
 sichuan2
 sichuan2a
 sicv
@@ -13098,12 +13134,15 @@ spinveti
 spirit76
 spitboss
 spk100
+spk102u
 spk102ua
 spk114it
 spk115it
 spk116it
 spk116itmx
 spk120in
+spk130
+spk200
 spk200ua
 spk201ua
 spk203us
@@ -13149,6 +13188,7 @@ springer
 sprint1
 sprint2
 sprint2a
+sprint2bl
 sprint2h
 sprint4
 sprint4a
@@ -13252,6 +13292,7 @@ sshooter11
 sshooter12
 sshooter17
 sshot
+sshota
 sshtl_l3
 sshtl_l7
 ssi
@@ -13451,6 +13492,9 @@ strfight
 strgchmp
 strhoop
 strider
+strider2
+strider2a
+strider2u
 striderj
 striderjr
 striderua
@@ -13833,6 +13877,7 @@ tbblue
 tbbympt3
 tbeastw2
 tblkkuzu
+tblkkuzug
 tbowl
 tbowla
 tbowlj
@@ -14557,6 +14602,7 @@ trs80pc3
 trsgkeep
 trshutvoy
 trsm100
+trspacadv
 trspacmis
 trspider
 trsrescue
@@ -15430,6 +15476,8 @@ wizzard
 wizzquiz
 wizzquiza
 wjammers
+wk1600
+wk1800
 wlcc
 wldangel
 wldarrow
@@ -15545,6 +15593,7 @@ wwallyja3p
 wwallyjad
 wwallyjd
 wwanpanm
+wwanpanmo
 wwestern
 wwestern1
 wwfmania
