--- a/00-databases-00/sorted_info_creation/0XXX/no_media.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/no_media.ini
@@ -97,6 +97,7 @@
 3wishrd
 3wonders
 3wondersb
+3wondersbi
 3wondersh
 3wondersr1
 3wondersu
@@ -1308,6 +1309,7 @@ asteroid2
 asteroidb1
 asteroidb2
 astinvad
+astinvadb
 astoneag
 astorm
 astorm3
@@ -1558,6 +1560,7 @@ bagnard
 bagnarda
 bagnardi
 bagnardio
+baile
 bakubaku
 bakubrkr
 bakuhatu
@@ -1570,7 +1573,6 @@ ballbros
 ballch
 balonfgt
 baluba
-bam2
 bambball
 ban_bkgj
 ban_db2j
@@ -1581,6 +1583,7 @@ ban_krrj
 ban_omt
 ban_onep
 ban_ordj
+ban_ult
 ban_utmj
 bananadr
 bananas
@@ -2152,6 +2155,7 @@ blueshrkmr2
 bluetigr
 blvelvet
 blzntrnd
+bmanroul
 bmaster
 bmboxing
 bmbugs
@@ -2626,6 +2630,7 @@ cameltry
 cameltrya
 cameltryau
 cameltryj
+cameltryu
 camlight
 can09
 canaryrc
@@ -2767,10 +2772,12 @@ cb3g
 cb3h
 cb3s51
 cb4
+cb4a
 cb5
 cb5_11
 cbaai
 cbaj
+cbajbl
 cball
 cbasebal
 cbdash
@@ -3307,6 +3314,7 @@ coh1000t
 coh1001l
 coh1002e
 coh1002m
+coh1002t
 coh1002v
 coh3002c
 coh3002t
@@ -3531,7 +3539,7 @@ cp_16
 cpacman
 cpacmanr1
 cpatrolm
-cpchess
+cpchess2
 cphantom
 cpoker
 cpoker101
@@ -4744,6 +4752,7 @@ drbyocwc
 drbyocwt
 drdmania
 drdunk
+dream9
 dreambal
 dreamlif
 dreamlss
@@ -5532,6 +5541,7 @@ ejollyx9
 ejsakura
 ejsakura12
 elandore
+elbaskb
 elcirculo
 eldoradd
 eldoraddo
@@ -6442,6 +6452,7 @@ epo_golf
 epo_guru
 epo_hamc
 epo_hamd
+epo_mail
 epo_mini
 epo_mj
 epo_mms
@@ -6738,6 +6749,7 @@ fathom
 fax
 fax2
 fb2010
+fb2010a
 fb2gen
 fb2genc1
 fb2genc2
@@ -6756,6 +6768,7 @@ fb2ndv1
 fb2ndv2
 fb3g
 fb4
+fb4_14
 fb4b2
 fb4c1
 fb4c2
@@ -7831,6 +7844,7 @@ geniep
 genius6
 genius6a
 genius6b
+geniuscps
 genix
 genmagi
 genmod
@@ -8677,6 +8691,7 @@ hanamomb
 hanamomo
 hanaoji
 hanaojia
+hanaren2
 hanaroku
 hanayara
 hangly
@@ -8702,6 +8717,7 @@ happy6101
 happyskl
 hapyfsh2
 hapytour
+harashi
 hardbody
 hardbodyc
 hardbodyg
@@ -8917,6 +8933,7 @@ heatbrlu
 heavymtl
 heberpop
 hedpanic
+hedpanic830
 hedpanica
 hedpanicf
 hedpanico
@@ -9313,6 +9330,7 @@ ibarablk
 ibarablka
 ibarao
 ibm3153
+ibm3477
 ibm5100
 ibm5110
 ibm5550
@@ -9501,6 +9519,7 @@ inthunt
 inthuntu
 intlaser
 intlc8
+intlc8m80
 intrepid
 intrepid2
 intrepidb
@@ -11176,6 +11195,7 @@ jigkmgria
 jin
 jingling
 jinhulu2
+jinpaish
 jitsupro
 jituroku
 jjack
@@ -11467,6 +11487,7 @@ kchampvs
 kchampvs2
 kchampvs3
 kchampvs4
+kchqflag
 kcontra
 kdribble
 kdynastg
@@ -11709,6 +11730,7 @@ kosteel
 kot
 kotbinsp
 kotbinyo
+kotbinyosu
 kothello
 kouyakyu
 kov
@@ -11741,6 +11763,7 @@ kovlsqh2
 kovplus
 kovplusa
 kovqhsgs
+kovqhsgs302
 kovsgqyz
 kovsgqyza
 kovsgqyzb
@@ -11754,7 +11777,9 @@ kovshp100
 kovshxas
 kovytzy
 kozure
+kpchess
 kpontoon
+kpplus
 kpv106
 kpython
 kpython2
@@ -12089,6 +12114,7 @@ lindbios
 lineking
 link
 linkypip
+linndrum
 liquidk
 liquidku
 litelrn
@@ -12364,6 +12390,7 @@ lxccminn
 lxccplan
 lxcmc250
 lxcmcy
+lxcmcyba
 lxcmcycr
 lxcmcydp
 lxcmcyfz
@@ -19915,6 +19942,7 @@ magibombk
 magibombl
 magibombm
 magibombn
+magibooksp
 magic
 magic10
 magic102
@@ -20143,6 +20171,9 @@ matchit2
 matchitb
 matchme
 matchnum
+matet
+matet10
+matet300
 mathmagi
 mathmarv
 matmania
@@ -20733,6 +20764,7 @@ mjtensin
 mjuraden
 mjvegas
 mjvegasa
+mjxy2
 mjyarou
 mjyarou2
 mjyougo
@@ -21080,6 +21112,7 @@ mrgoemon
 mrheli
 mrisc
 mrisc2
+mrisca
 mrjong
 mrkicker
 mrkickera
@@ -21564,6 +21597,7 @@ nd80z
 nd8lines
 ndongmul
 ndongmul2
+ndpbj
 nds
 ndxron10
 nebulbee
@@ -23538,6 +23572,7 @@ pm68k
 pma
 pmicrodx
 pmonster
+pmp11
 pmpoker
 pmv112
 pmv112r
@@ -23784,7 +23819,6 @@ ppchampa
 ppgc200g
 ppj
 ppking
-pplus
 ppmast93
 pprobe
 ppsatan
@@ -24068,6 +24102,7 @@ puckimon
 puckman
 puckmana
 puckmanb
+puckmanb3
 puckmanf
 puckmanh
 puckmod
@@ -24206,6 +24241,7 @@ qgakumon
 qgh
 qgundam
 qhzb
+qiwang
 qix
 qix2
 qixa
@@ -24722,6 +24758,7 @@ rdft2u
 rdft2us
 rdfta
 rdftadi
+rdftadia
 rdftam
 rdftau
 rdftauge
@@ -31241,6 +31278,7 @@ senwld
 seoul88
 setaroul
 setaroula
+setaroulm
 sevenlnd
 sevilla
 sevillaa
@@ -32890,12 +32928,15 @@ spirit76
 spirulo
 spitboss
 spk100
+spk102u
 spk102ua
 spk114it
 spk115it
 spk116it
 spk116itmx
 spk120in
+spk130
+spk200
 spk200ua
 spk201ua
 spk203us
@@ -32953,6 +32994,7 @@ springer
 sprint1
 sprint2
 sprint2a
+sprint2bl
 sprint2h
 sprint4
 sprint4a
@@ -33133,6 +33175,7 @@ sshooter12
 sshooter17
 sshootr2
 sshot
+sshota
 sshtl_l3
 sshtl_l7
 sshtlzac
@@ -34052,6 +34095,7 @@ tempest3
 temptube
 tenballs
 tengai
+tengaibl
 tengaij
 tenkai
 tenkai2b
@@ -34875,6 +34919,7 @@ trs80pc3
 trsgkeep
 trshutvoy
 trsking
+trspacadv
 trspacmis
 trspider
 trsrescue
@@ -35070,6 +35115,7 @@ tvindictr
 tvmjfc
 tvpc_dor
 tvpc_ham
+tvpc_hk
 tvpc_tom
 tvpoker
 tvsprt10
@@ -35158,6 +35204,7 @@ u220
 uballoon
 uboat
 uboat65
+ubox30
 uccops
 uccopsar
 uccopsaru
@@ -36632,6 +36679,7 @@ wwallyja3p
 wwallyjad
 wwallyjd
 wwanpanm
+wwanpanmo
 wwaratah
 wwaratahsp
 wways
@@ -36851,6 +36899,7 @@ yumefuda
 yutnori
 yuyugogo
 yuyuhaku
+yyhm
 z22
 z29
 z80dev
