Update classich.ini / manually add drivers 274/275
epo_tetr
gigapets
stackch
venusdm

--- a/00-databases-00/sorted_info_creation/0XXX/classich.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/classich.ini
@@ -59,6 +59,7 @@ elecdet
 eleciq
 epacman2
 epacman2r
+epo_tetr
 esbattle
 esoccer
 estargte
@@ -74,6 +75,7 @@ galaxy2b
 gckong
 gdigdug
 ghalien
+gigapets
 ginv
 ginv1000
 ginv2000
@@ -138,6 +140,7 @@ skywriter
 splasfgt
 splitsec
 ssfball
+stackch
 stopthief
 stopthiefp
 subwars
@@ -172,6 +175,7 @@ trsrescue
 trthuball
 uboat
 ufombs
+venusdm
 vinvader
 wildfire
 zackman
